syntax = "proto3";
package secret.tss.v1;

import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "secret/tss/v1/types.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/scrtlabs/SecretNetwork/x/tss/types";

// Msg defines the TSS Msg service (merged from MPC + Signing modules)
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams updates module parameters
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // DKG Messages (from x/mpc)
  rpc CreateKeySet(MsgCreateKeySet) returns (MsgCreateKeySetResponse);
  rpc InitiateDKG(MsgInitiateDKG) returns (MsgInitiateDKGResponse);
  rpc SubmitDKGRound1(MsgSubmitDKGRound1) returns (MsgSubmitDKGRound1Response);
  rpc SubmitDKGRound2(MsgSubmitDKGRound2) returns (MsgSubmitDKGRound2Response);

  // Signing Messages (from x/signing)
  rpc RequestSignature(MsgRequestSignature) returns (MsgRequestSignatureResponse);
  rpc SubmitCommitment(MsgSubmitCommitment) returns (MsgSubmitCommitmentResponse);
  rpc SubmitSignatureShare(MsgSubmitSignatureShare) returns (MsgSubmitSignatureShareResponse);
}

// MsgUpdateParams updates module parameters
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "secret/tss/MsgUpdateParams";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message MsgUpdateParamsResponse {}

// DKG Messages

message MsgCreateKeySet {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1;
  uint32 threshold = 2;
  uint32 max_signers = 3;
  string description = 4;
  int64 timeout_blocks = 5;
}

message MsgCreateKeySetResponse {
  string key_set_id = 1;
  string dkg_session_id = 2;
}

message MsgInitiateDKG {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1;
  string key_set_id = 2;
}

message MsgInitiateDKGResponse {
  string session_id = 1;
}

message MsgSubmitDKGRound1 {
  option (cosmos.msg.v1.signer) = "validator";

  string validator = 1;
  string session_id = 2;
  bytes commitment = 3;
}

message MsgSubmitDKGRound1Response {}

message MsgSubmitDKGRound2 {
  option (cosmos.msg.v1.signer) = "validator";

  string validator = 1;
  string session_id = 2;
  bytes share = 3;
}

message MsgSubmitDKGRound2Response {}

// Signing Messages

message MsgRequestSignature {
  option (cosmos.msg.v1.signer) = "requester";

  string requester = 1;
  string key_set_id = 2;
  bytes message_hash = 3;
  string callback = 4;
}

message MsgRequestSignatureResponse {
  string request_id = 1;
}

message MsgSubmitCommitment {
  option (cosmos.msg.v1.signer) = "validator";

  string validator = 1;
  string request_id = 2;
  bytes commitment = 3;
}

message MsgSubmitCommitmentResponse {}

message MsgSubmitSignatureShare {
  option (cosmos.msg.v1.signer) = "validator";

  string validator = 1;
  string request_id = 2;
  bytes share = 3;
}

message MsgSubmitSignatureShareResponse {}
